--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-intl": "^4.1.0",
+    "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
